# partner-client

./: .gitignore  FIRST-PRINCIPLE.md  README.md  pyproject.toml  v0.1-spec.md
partner_client/: __init__.py  __main__.py  _git_helpers.py  _mlx_client.py  client.py  commands.py  config.py  directives.py  doctor.py  mcp_client.py  memory.py  model_selector.py  paths.py  plans.py  search_router.py  session.py  subagent.py  timeline.py  tokens.py  tools.py  ui.py
partner_client/distill/: __init__.py  cli.py  manifest.py  pass1.py  verify.py
partner_client/tools_builtin/: __init__.py  choose_silence.py  delete_path.py  edit_file.py  fetch_page.py  flag_distress.py  git_add.py  git_clone.py  git_commit.py  git_diff.py  git_log.py  git_pull.py  git_push.py  git_status.py  glob_files.py  grep_files.py  hub_check_inbox.py  hub_list_partners.py  hub_read_letter.py  hub_send.py  list_files.py  (+9 more)
partner_client_gui/: api.py  index.html  launch.py  package-lock.json  package.json
tests/: test_config_and_memory.py  test_confirm_answer_classifier.py  test_cross_scope_warning.py  test_distill_pass1.py  test_doctor_output.py  test_git_gating.py  test_git_push_allowlist_parsing.py  test_gui_lumen_surface.py  test_gui_right_to_end.py  test_hub_list_and_write_diff.py  test_hub_read_letter_containment.py  test_image_paths.py  test_mlx_backend.py  test_model_selection.py  test_path_mutators.py  test_paths.py  test_plan_mode.py  test_prewarm_and_heavy_resume.py  test_protect_save.py  test_request_checkpoint_no_gate.py  test_resume_truncation.py  test_right_to_end.py  test_scope_containment.py  test_subagent.py  test_thinking_mode.py  test_timeline_and_plans.py  test_ui_streaming.py
tools/: README.md
(+7 files in other folders)
